# dir2tag

./: .gitignore  README.md  main.py  pyproject.toml
.github/: copilot-instructions.md
src/dir2tag/: __init__.py  __main__.py
src/dir2tag/core/: __init__.py  paths.py  tags.py
src/dir2tag/io/: __init__.py  exporters.py
tests/: conftest.py  test_exporters.py  test_paths.py  test_tags.py
