[project]
name = "dir2tag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "git-filter-repo>=2.47.0",
    "pytest>=8.4.2",
]

[tool.ruff]
line-length = 88
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"test_*.py" = [
    "S101", # assert-used
    "D103", # missing docstring in public function
]
